Fix URLs for Baidu and Alibaba Group in index.html
Updated URLs for Baidu and Alibaba Group to point to their respective investor relations and English pages.

--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
         { icon: "building-2", text: "Work experience at leading technology companies in China" }
       ],
       aboutCompanies: [
-        { name: "Baidu", url: "https://www.baidu.com", desc: "Leading AI and internet services company, well known for search, cloud, and deep learning technologies." },
-        { name: "Alibaba Group", url: "https://www.alibabagroup.com", desc: "Global leader in e-commerce, cloud computing, and digital infrastructure." },
+        { name: "Baidu", url: "https://ir.baidu.com/", desc: "Leading AI and internet services company, well known for search, cloud, and deep learning technologies." },
+        { name: "Alibaba Group", url: "https://www.alibabagroup.com/en-US/", desc: "Global leader in e-commerce, cloud computing, and digital infrastructure." },
         { name: "Meituan", url: "https://www.meituan.com/en-US/about-us", desc: "Major platform for food delivery, local services, and on-demand consumer technology." },
         { name: "KE Holdings (Beike)", url: "https://investors.ke.com", desc: "Technology-driven real estate platform integrating online and offline brokerage services." }
       ],
