update pictures for project

--- a/index.html
+++ b/index.html
@@ -548,7 +548,8 @@
             "images/low_code_1.png",
             "images/low_code_2.png",
             "images/low_code_3.png",
-            "images/low_code_4.png"
+            "images/low_code_4.png",
+            "images/low_code_5.png",
           ],
           background: "Operations needed to ship campaign pages (promos, seasonal themes) frequently. Each launch took 4–5 days and depended on frontend capacity and releases, which became a bottleneck.",
           role: "Frontend tech lead: owned the builder’s frontend architecture, visual editor, component library, and publish/rollback capabilities.",
