--- a/index.html
+++ b/index.html
@@ -162,6 +162,32 @@
     }
 
     .experience-card-hover:hover { border-color: var(--accent); }
+    .experience-company-logo-wrap {
+      width: 48px;
+      height: 48px;
+      min-width: 48px;
+      min-height: 48px;
+      border-radius: 12px;
+      overflow: hidden;
+      background: var(--bg-secondary);
+      border: 1px solid var(--border);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-shrink: 0;
+    }
+    .experience-company-logo-wrap img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      padding: 4px;
+    }
+    .experience-company-logo-fallback {
+      font-size: 1.25rem;
+      font-weight: 700;
+      color: var(--accent);
+      text-transform: uppercase;
+    }
     .project-card-hover:hover { border-color: var(--accent); }
     .project-screenshot { border-radius: 12px; overflow: hidden; border: 1px solid var(--border); }
     .project-phone-frame {
@@ -495,10 +521,11 @@
       aboutRelocating: "Currently moving to New Zealand for postgraduate study and job-seeking.",
       aboutClosing: "I love clean code, smart UI interactions, and turning designs into delightful user experiences.",
 
-      // Work Experience (companyBrief optional: one-line company intro, shown under company name)
+      // Work Experience (companyLogo optional: logo URL; companyBrief optional)
       experienceList: [
         {
           company: "Beike (KE Holdings)",
+          companyLogo: "https://logo.clearbit.com/ke.com",
           companyBrief: "Technology-driven real estate platform integrating online and offline brokerage services.",
           companyUrl: "https://investors.ke.com",
           position: "Frontend Tech Lead",
@@ -509,6 +536,7 @@
         },
         {
           company: "Alibaba Group",
+          companyLogo: "images/company_logo/alibaba.png",
           companyBrief: "Global leader in e-commerce, cloud computing, and digital infrastructure.",
           companyUrl: "https://www.alibabagroup.com/en-US/",
           position: "Frontend Engineer",
@@ -519,6 +547,7 @@
         },
         {
           company: "Baidu",
+          companyLogo: "https://logo.clearbit.com/baidu.com",
           companyBrief: "Leading AI and internet services company, well known for search, cloud, and deep learning technologies.",
           companyUrl: "https://ir.baidu.com/",
           position: "Frontend Tech Lead",
@@ -529,6 +558,7 @@
         },
         {
           company: "Meituan",
+          companyLogo: "https://logo.clearbit.com/meituan.com",
           companyBrief: "Major platform for food delivery, local services, and on-demand consumer technology.",
           companyUrl: "https://www.meituan.com/en-US/about-us",
           position: "Senior Frontend Engineer",
@@ -545,11 +575,11 @@
           title: "Low-code Marketing Campaign Builder",
           type: "mobile",
           screenshots: [
-            "images/low_code_1.png",
-            "images/low_code_2.png",
-            "images/low_code_3.png",
-            "images/low_code_4.png",
-            "images/low_code_5.png",
+            "images/low_code_platform/low_code_1.png",
+            "images/low_code_platform/low_code_2.png",
+            "images/low_code_platform/low_code_3.png",
+            "images/low_code_platform/low_code_4.png",
+            "images/low_code_platform/low_code_5.png",
           ],
           background: "Operations needed to ship campaign pages (promos, seasonal themes) frequently. Each launch took 4–5 days and depended on frontend capacity and releases, which became a bottleneck.",
           role: "Frontend tech lead: owned the builder’s frontend architecture, visual editor, component library, and publish/rollback capabilities.",
@@ -999,19 +1029,39 @@
                   />
 
                   <div className="glass rounded-2xl p-6 md:p-8 transition-all duration-400 experience-card-hover">
-                    <div className="flex flex-col md:flex-row md:items-center md:justify-between mb-2">
-                      <h3 className="text-xl md:text-2xl font-bold">
-                        {exp.companyUrl ? (
-                          <a href={exp.companyUrl} target="_blank" rel="noopener noreferrer" className="link-underline hover:opacity-90">{exp.company}</a>
-                        ) : (
-                          exp.company
+                    <div className="flex gap-4 mb-2">
+                      <div className="experience-company-logo-wrap">
+                        {exp.companyLogo ? (
+                          <img
+                            src={exp.companyLogo}
+                            alt=""
+                            onError={(e) => {
+                              e.currentTarget.style.display = 'none';
+                              var next = e.currentTarget.nextElementSibling;
+                              if (next) next.style.display = 'flex';
+                            }}
+                          />
+                        ) : null}
+                        <span className="experience-company-logo-fallback" style={{ display: exp.companyLogo ? 'none' : 'flex' }}>
+                          {(exp.company || '').charAt(0)}
+                        </span>
+                      </div>
+                      <div className="flex-1 min-w-0">
+                        <div className="flex flex-col md:flex-row md:items-center md:justify-between gap-1">
+                          <h3 className="text-xl md:text-2xl font-bold">
+                            {exp.companyUrl ? (
+                              <a href={exp.companyUrl} target="_blank" rel="noopener noreferrer" className="link-underline hover:opacity-90">{exp.company}</a>
+                            ) : (
+                              exp.company
+                            )}
+                          </h3>
+                          <span className="text-sm opacity-60">{exp.period}</span>
+                        </div>
+                        {exp.companyBrief && (
+                          <p className="text-sm opacity-60 mt-1 leading-relaxed">{exp.companyBrief}</p>
                         )}
-                      </h3>
-                      <span className="text-sm opacity-60 mt-1 md:mt-0">{exp.period}</span>
+                      </div>
                     </div>
-                    {exp.companyBrief && (
-                      <p className="text-sm opacity-60 mb-3 leading-relaxed">{exp.companyBrief}</p>
-                    )}
                     <p className="text-base font-medium mb-4" style={{ color: 'var(--accent)' }}>
                       {exp.position}
                     </p>
