--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
 
     .experience-card-hover:hover { border-color: var(--accent); }
     .experience-company-logo-wrap {
-      width: 48px;
-      height: 48px;
-      min-width: 48px;
-      min-height: 48px;
-      border-radius: 12px;
+      width: 40px;
+      height: 40px;
+      min-width: 40px;
+      min-height: 40px;
+      border-radius: 10px;
       overflow: hidden;
       background: var(--bg-secondary);
       border: 1px solid var(--border);
@@ -181,12 +181,11 @@
       height: 100%;
       object-fit: contain;
       object-position: center;
-      padding: 6px;
       box-sizing: border-box;
-      border-radius: 8px;
+      border-radius: 6px;
     }
     .experience-company-logo-fallback {
-      font-size: 1.25rem;
+      font-size: 1.1rem;
       font-weight: 700;
       color: var(--accent);
       text-transform: uppercase;
@@ -195,6 +194,17 @@
       justify-content: center;
       width: 100%;
       height: 100%;
+    }
+    @media (min-width: 768px) {
+      .experience-company-logo-wrap {
+        width: 48px;
+        height: 48px;
+        min-width: 48px;
+        min-height: 48px;
+        border-radius: 12px;
+      }
+      .experience-company-logo-wrap img { border-radius: 8px; }
+      .experience-company-logo-fallback { font-size: 1.25rem; }
     }
     .project-card-hover:hover { border-color: var(--accent); }
     .project-screenshot { border-radius: 12px; overflow: hidden; border: 1px solid var(--border); }
@@ -1036,8 +1046,8 @@
                     style={{ borderColor: 'var(--accent)', background: 'var(--bg-primary)' }}
                   />
 
-                  <div className="glass rounded-2xl p-6 md:p-8 transition-all duration-400 experience-card-hover">
-                    <div className="flex gap-4 mb-2">
+                  <div className="glass rounded-2xl p-5 md:p-8 transition-all duration-400 experience-card-hover">
+                    <div className="flex items-start gap-3 md:gap-4 mb-2">
                       <div className="experience-company-logo-wrap">
                         {exp.companyLogo ? (
                           <img
@@ -1055,8 +1065,8 @@
                         </span>
                       </div>
                       <div className="flex-1 min-w-0">
-                        <div className="flex flex-col md:flex-row md:items-center md:justify-between gap-1">
-                          <h3 className="text-xl md:text-2xl font-bold">
+                        <div className="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-0.5 sm:gap-2">
+                          <h3 className="text-lg md:text-2xl font-bold leading-tight">
                             {exp.companyUrl ? (
                               <a href={exp.companyUrl} target="_blank" rel="noopener noreferrer" className="link-underline hover:opacity-90">{exp.company}</a>
                             ) : (
@@ -1066,7 +1076,7 @@
                           <span className="text-sm opacity-60">{exp.period}</span>
                         </div>
                         {exp.companyBrief && (
-                          <p className="text-sm opacity-60 mt-1 leading-relaxed">{exp.companyBrief}</p>
+                          <p className="text-xs md:text-sm opacity-60 mt-1 leading-relaxed">{exp.companyBrief}</p>
                         )}
                       </div>
                     </div>
