update company icon

--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
               </div>
 
               <div className="bento-item glass flex flex-col justify-center items-center text-center">
-                <i data-lucide="briefcase" className="w-8 h-8 mb-3 about-body-muted" style={{ color: 'var(--text-muted)' }} />
+                <i data-lucide="building-2" className="w-8 h-8 mb-3 about-body-muted" style={{ color: 'var(--text-muted)' }} />
                 <span className="text-3xl font-bold about-body" style={{ color: 'var(--accent)' }}>{profileData.experienceList.length}</span>
                 <span className="text-sm mt-1 about-body-muted">Companies</span>
               </div>
